# app/controllers/user_controller.go
@@ -10,25 +10,21 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary Login 
+// @Summary Login
 // @Description Login todo website by name and password
 // @Tags users
-// @Accept json
-// @Produce json 
-// @Param name query string true "User name"
-// @Param password query string true "User password"
-// @Success 200 {object} UserLoginResponse "Login successfully"
-// @Failure 400 {object} ErrorResponse "Bad request"
-// @Router /api/v1/login [get]
+// @Accept application/json
+// @Produce json
+// @Param name&password body string true "User name and password"
+// @Router /login [post]
 func UserLoginController(c *gin.Context) {
 	var req requests.UserLoginRequest
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(
 			http.StatusBadRequest, gin.H{
-				"errors": gin.H{
-					"message": err.Error(),
-				},
+				"errors": err.Error(),
+				"message": "cannot bind params",
 			},
 		)
 
@@ -40,9 +36,8 @@ func UserLoginController(c *gin.Context) {
 	if err := dao.UserLoginExec(&req, &userJWTSubject); err != nil {
 		c.JSON(
 			http.StatusBadRequest, gin.H{
-				"errors": gin.H{
-					"message": err.Error(),
-				},
+				"errors": err.Error(),
+				"message": "login failed",
 			},
 		)
 
@@ -61,6 +56,48 @@ func UserLoginController(c *gin.Context) {
 	)
 }
 
+// @Summary Register 
+// @Description Register todo website by name, password and rePassword
+// @Tags users
+// @Accept application/json
+// @Produce json 
+// @Param name&password&rePassword body string true "User name, password, rePassword"
+// @Router /register [post]
 func UserRegisterController(c *gin.Context) {
-	
+	var req requests.UserRegisterRequest
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(
+			http.StatusBadRequest, gin.H{
+				"errors": err.Error(),
+				"message": "cannot bind params",
+			},
+		)
+
+		return
+	}
+
+	var userJWTSubject helpers.UserJWTSubject
+
+	if err := dao.UserRegisterExec(&req, &userJWTSubject); err != nil {
+		c.JSON(
+			http.StatusBadRequest, gin.H{
+				"errors": err.Error(),
+				"message": "register failed",
+			},
+		)
+
+		return
+	}
+
+	var response responses.UserLoginResponse
+
+	response.Token = helpers.GenerateToken(userJWTSubject)
+
+	c.JSON(
+		http.StatusOK, gin.H{
+			"message": "Register successfully",
+			"data": response,
+		},
+	)
 }
